# opencascade

./: .gitignore  CMakeLists.txt  conandata.yml
adm/: MODULES
adm/cmake/: cotire.cmake  occt_csf.cmake  occt_macros.cmake  occt_resources.cmake  occt_toolkit.cmake  occt_toolkit.cmake.cache  occt_toolkit_prepare_sample.cmake  qt_macro.cmake  tbb.cmake
adm/qmake/: OccToolkit.pri
adm/templates/: DRAWEXE.vcxproj.user.in  TInspectorEXE.vcxproj.user.in  custom.build.bat.in  custom.build.sh.in
install/x64/lib/: DRAWEXE.exp  ExpToCasExe.exp  TKBO.exp  TKBO.lib  TKBRep.exp  TKBRep.lib  TKBin.exp  TKBin.lib  TKBinL.exp  TKBinL.lib  TKBinTObj.exp  TKBinXCAF.exp  TKBinXCAF.lib  TKBool.exp  TKBool.lib  TKCAF.exp  TKCAF.lib  TKCDF.exp  TKCDF.lib  TKD3DHost.exp  TKD3DHostTest.exp  TKDCAF.exp  TKDraw.exp  TKDraw.lib  TKExpress.exp  TKExpress.lib  TKFeat.exp  TKFillet.exp  TKFillet.lib  TKG2d.exp  TKG2d.lib  TKG3d.exp  TKG3d.lib  TKGeomAlgo.exp  TKGeomAlgo.lib  TKGeomBase.exp  TKGeomBase.lib  TKHLR.exp  TKHLR.lib  TKIGES.exp  (+77 more)
install/x64/libd/: DRAWEXE.exp  DRAWEXE.lib  ExpToCasExe.exp  ExpToCasExe.lib  TKBO.exp  TKBRep.exp  TKBin.exp  TKBin.lib  TKBinL.exp  TKBinTObj.exp  TKBinTObj.lib  TKBinXCAF.exp  TKBool.exp  TKCAF.exp  TKCAF.lib  TKCDF.exp  TKD3DHost.exp  TKD3DHost.lib  TKD3DHostTest.exp  TKD3DHostTest.lib  TKDCAF.exp  TKDCAF.lib  TKDraw.exp  TKExpress.exp  TKFeat.exp  TKFeat.lib  TKFillet.exp  TKG2d.exp  TKG2d.lib  TKG3d.exp  TKG3d.lib  TKGeomAlgo.exp  TKGeomAlgo.lib  TKGeomBase.exp  TKHLR.exp  TKHLR.lib  TKIGES.exp  TKIGES.lib  TKIVtk.exp  TKIVtkDraw.exp  (+63 more)
src/Approx/: Approx_MCurvesToBSpCurve.cxx
src/DRAWEXE/: CMakeLists.txt
src/Standard/: Standard_MMgrTBBalloc.cxx
