if(CC_INSTALL_OPENCASCADE)
	__install_directory_specif(${CMAKE_CURRENT_SOURCE_DIR}/install/include/ opencascade)
	
	set(LIBS)
	set(DLLS)
	
					
	set(LIB_WIN_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/install/x64/)
	if(CMAKE_BUILD_TYPE MATCHES "Release")
		if(CC_BC_WIN)
			
			set( LIBS ${LIB_WIN_ROOT}/lib/DRAWEXE.exp
			${LIB_WIN_ROOT}/lib/DRAWEXE.lib
			${LIB_WIN_ROOT}/lib/ExpToCasExe.exp
			${LIB_WIN_ROOT}/lib/ExpToCasExe.lib
			${LIB_WIN_ROOT}/lib/TKBin.exp
			${LIB_WIN_ROOT}/lib/TKBin.lib
			${LIB_WIN_ROOT}/lib/TKBinL.exp
			${LIB_WIN_ROOT}/lib/TKBinL.lib
			${LIB_WIN_ROOT}/lib/TKBinTObj.exp
			${LIB_WIN_ROOT}/lib/TKBinTObj.lib
			${LIB_WIN_ROOT}/lib/TKBinXCAF.exp
			${LIB_WIN_ROOT}/lib/TKBinXCAF.lib
			${LIB_WIN_ROOT}/lib/TKBO.exp
			${LIB_WIN_ROOT}/lib/TKBO.lib
			${LIB_WIN_ROOT}/lib/TKBool.exp
			${LIB_WIN_ROOT}/lib/TKBool.lib
			${LIB_WIN_ROOT}/lib/TKBRep.exp
			${LIB_WIN_ROOT}/lib/TKBRep.lib
			${LIB_WIN_ROOT}/lib/TKCAF.exp
			${LIB_WIN_ROOT}/lib/TKCAF.lib
			${LIB_WIN_ROOT}/lib/TKCDF.exp
			${LIB_WIN_ROOT}/lib/TKCDF.lib
			${LIB_WIN_ROOT}/lib/TKD3DHost.exp
			${LIB_WIN_ROOT}/lib/TKD3DHost.lib
			${LIB_WIN_ROOT}/lib/TKD3DHostTest.exp
			${LIB_WIN_ROOT}/lib/TKD3DHostTest.lib
			${LIB_WIN_ROOT}/lib/TKDCAF.exp
			${LIB_WIN_ROOT}/lib/TKDCAF.lib
			${LIB_WIN_ROOT}/lib/TKDFBrowser.lib
			${LIB_WIN_ROOT}/lib/TKDraw.exp
			${LIB_WIN_ROOT}/lib/TKDraw.lib
			${LIB_WIN_ROOT}/lib/TKernel.exp
			${LIB_WIN_ROOT}/lib/TKernel.lib
			${LIB_WIN_ROOT}/lib/TKExpress.exp
			${LIB_WIN_ROOT}/lib/TKExpress.lib
			${LIB_WIN_ROOT}/lib/TKFeat.exp
			${LIB_WIN_ROOT}/lib/TKFeat.lib
			${LIB_WIN_ROOT}/lib/TKFillet.exp
			${LIB_WIN_ROOT}/lib/TKFillet.lib
			${LIB_WIN_ROOT}/lib/TKG2d.exp
			${LIB_WIN_ROOT}/lib/TKG2d.lib
			${LIB_WIN_ROOT}/lib/TKG3d.exp
			${LIB_WIN_ROOT}/lib/TKG3d.lib
			${LIB_WIN_ROOT}/lib/TKGeomAlgo.exp
			${LIB_WIN_ROOT}/lib/TKGeomAlgo.lib
			${LIB_WIN_ROOT}/lib/TKGeomBase.exp
			${LIB_WIN_ROOT}/lib/TKGeomBase.lib
			${LIB_WIN_ROOT}/lib/TKHLR.exp
			${LIB_WIN_ROOT}/lib/TKHLR.lib
			${LIB_WIN_ROOT}/lib/TKIGES.exp
			${LIB_WIN_ROOT}/lib/TKIGES.lib
			${LIB_WIN_ROOT}/lib/TKIVtk.exp
			${LIB_WIN_ROOT}/lib/TKIVtk.lib
			${LIB_WIN_ROOT}/lib/TKIVtkDraw.exp
			${LIB_WIN_ROOT}/lib/TKIVtkDraw.lib
			${LIB_WIN_ROOT}/lib/TKLCAF.exp
			${LIB_WIN_ROOT}/lib/TKLCAF.lib
			${LIB_WIN_ROOT}/lib/TKMath.exp
			${LIB_WIN_ROOT}/lib/TKMath.lib
			${LIB_WIN_ROOT}/lib/TKMesh.exp
			${LIB_WIN_ROOT}/lib/TKMesh.lib
			${LIB_WIN_ROOT}/lib/TKMeshVS.exp
			${LIB_WIN_ROOT}/lib/TKMeshVS.lib
			${LIB_WIN_ROOT}/lib/TKMessageModel.lib
			${LIB_WIN_ROOT}/lib/TKMessageView.lib
			${LIB_WIN_ROOT}/lib/TKOffset.exp
			${LIB_WIN_ROOT}/lib/TKOffset.lib
			${LIB_WIN_ROOT}/lib/TKOpenGl.exp
			${LIB_WIN_ROOT}/lib/TKOpenGl.lib
			${LIB_WIN_ROOT}/lib/TKOpenGles.lib
			${LIB_WIN_ROOT}/lib/TKOpenGlesTest.lib
			${LIB_WIN_ROOT}/lib/TKOpenGlTest.exp
			${LIB_WIN_ROOT}/lib/TKOpenGlTest.lib
			${LIB_WIN_ROOT}/lib/TKPrim.exp
			${LIB_WIN_ROOT}/lib/TKPrim.lib
			${LIB_WIN_ROOT}/lib/TKQADraw.exp
			${LIB_WIN_ROOT}/lib/TKQADraw.lib
			${LIB_WIN_ROOT}/lib/TKRWMesh.exp
			${LIB_WIN_ROOT}/lib/TKRWMesh.lib
			${LIB_WIN_ROOT}/lib/TKService.exp
			${LIB_WIN_ROOT}/lib/TKService.lib
			${LIB_WIN_ROOT}/lib/TKShapeView.lib
			${LIB_WIN_ROOT}/lib/TKShHealing.exp
			${LIB_WIN_ROOT}/lib/TKShHealing.lib
			${LIB_WIN_ROOT}/lib/TKStd.exp
			${LIB_WIN_ROOT}/lib/TKStd.lib
			${LIB_WIN_ROOT}/lib/TKStdL.exp
			${LIB_WIN_ROOT}/lib/TKStdL.lib
			${LIB_WIN_ROOT}/lib/TKSTEP.exp
			${LIB_WIN_ROOT}/lib/TKSTEP.lib
			${LIB_WIN_ROOT}/lib/TKSTEP209.exp
			${LIB_WIN_ROOT}/lib/TKSTEP209.lib
			${LIB_WIN_ROOT}/lib/TKSTEPAttr.exp
			${LIB_WIN_ROOT}/lib/TKSTEPAttr.lib
			${LIB_WIN_ROOT}/lib/TKSTEPBase.exp
			${LIB_WIN_ROOT}/lib/TKSTEPBase.lib
			${LIB_WIN_ROOT}/lib/TKSTL.exp
			${LIB_WIN_ROOT}/lib/TKSTL.lib
			${LIB_WIN_ROOT}/lib/TKTInspector.lib
			${LIB_WIN_ROOT}/lib/TKTInspectorAPI.lib
			${LIB_WIN_ROOT}/lib/TKTObj.exp
			${LIB_WIN_ROOT}/lib/TKTObj.lib
			${LIB_WIN_ROOT}/lib/TKTObjDRAW.exp
			${LIB_WIN_ROOT}/lib/TKTObjDRAW.lib
			${LIB_WIN_ROOT}/lib/TKToolsDraw.lib
			${LIB_WIN_ROOT}/lib/TKTopAlgo.exp
			${LIB_WIN_ROOT}/lib/TKTopAlgo.lib
			${LIB_WIN_ROOT}/lib/TKTopTest.exp
			${LIB_WIN_ROOT}/lib/TKTopTest.lib
			${LIB_WIN_ROOT}/lib/TKTreeModel.lib
			${LIB_WIN_ROOT}/lib/TKV3d.exp
			${LIB_WIN_ROOT}/lib/TKV3d.lib
			${LIB_WIN_ROOT}/lib/TKVCAF.exp
			${LIB_WIN_ROOT}/lib/TKVCAF.lib
			${LIB_WIN_ROOT}/lib/TKView.lib
			${LIB_WIN_ROOT}/lib/TKViewerTest.exp
			${LIB_WIN_ROOT}/lib/TKViewerTest.lib
			${LIB_WIN_ROOT}/lib/TKVInspector.lib
			${LIB_WIN_ROOT}/lib/TKVRML.exp
			${LIB_WIN_ROOT}/lib/TKVRML.lib
			${LIB_WIN_ROOT}/lib/TKXCAF.exp
			${LIB_WIN_ROOT}/lib/TKXCAF.lib
			${LIB_WIN_ROOT}/lib/TKXDE.exp
			${LIB_WIN_ROOT}/lib/TKXDE.lib
			${LIB_WIN_ROOT}/lib/TKXDECascade.exp
			${LIB_WIN_ROOT}/lib/TKXDECascade.lib
			${LIB_WIN_ROOT}/lib/TKXDEDRAW.exp
			${LIB_WIN_ROOT}/lib/TKXDEDRAW.lib
			${LIB_WIN_ROOT}/lib/TKXDEIGES.exp
			${LIB_WIN_ROOT}/lib/TKXDEIGES.lib
			${LIB_WIN_ROOT}/lib/TKXDESTEP.exp
			${LIB_WIN_ROOT}/lib/TKXDESTEP.lib
			${LIB_WIN_ROOT}/lib/TKXMesh.exp
			${LIB_WIN_ROOT}/lib/TKXMesh.lib
			${LIB_WIN_ROOT}/lib/TKXml.exp
			${LIB_WIN_ROOT}/lib/TKXml.lib
			${LIB_WIN_ROOT}/lib/TKXmlL.exp
			${LIB_WIN_ROOT}/lib/TKXmlL.lib
			${LIB_WIN_ROOT}/lib/TKXmlTObj.exp
			${LIB_WIN_ROOT}/lib/TKXmlTObj.lib
			${LIB_WIN_ROOT}/lib/TKXmlXCAF.exp
			${LIB_WIN_ROOT}/lib/TKXmlXCAF.lib
			${LIB_WIN_ROOT}/lib/TKXSBase.exp
			${LIB_WIN_ROOT}/lib/TKXSBase.lib
			${LIB_WIN_ROOT}/lib/TKXSDRAW.exp
			${LIB_WIN_ROOT}/lib/TKXSDRAW.lib

			)
			
			set (DLLS 	${LIB_WIN_ROOT}/bin/DRAWEXE.exe
						${LIB_WIN_ROOT}/bin/ExpToCasExe.exe
						${LIB_WIN_ROOT}/bin/TInspectorEXE.exe
						${LIB_WIN_ROOT}/bin/TKBin.dll
						${LIB_WIN_ROOT}/bin/TKBinL.dll
						${LIB_WIN_ROOT}/bin/TKBinTObj.dll
						${LIB_WIN_ROOT}/bin/TKBinXCAF.dll
						${LIB_WIN_ROOT}/bin/TKBO.dll
						${LIB_WIN_ROOT}/bin/TKBool.dll
						${LIB_WIN_ROOT}/bin/TKBRep.dll
						${LIB_WIN_ROOT}/bin/TKCAF.dll
						${LIB_WIN_ROOT}/bin/TKCDF.dll
						${LIB_WIN_ROOT}/bin/TKD3DHost.dll
						${LIB_WIN_ROOT}/bin/TKD3DHostTest.dll
						${LIB_WIN_ROOT}/bin/TKDCAF.dll
						${LIB_WIN_ROOT}/bin/TKDFBrowser.dll
						${LIB_WIN_ROOT}/bin/TKDraw.dll
						${LIB_WIN_ROOT}/bin/TKernel.dll
						${LIB_WIN_ROOT}/bin/TKExpress.dll
						${LIB_WIN_ROOT}/bin/TKFeat.dll
						${LIB_WIN_ROOT}/bin/TKFillet.dll
						${LIB_WIN_ROOT}/bin/TKG2d.dll
						${LIB_WIN_ROOT}/bin/TKG3d.dll
						${LIB_WIN_ROOT}/bin/TKGeomAlgo.dll
						${LIB_WIN_ROOT}/bin/TKGeomBase.dll
						${LIB_WIN_ROOT}/bin/TKHLR.dll
						${LIB_WIN_ROOT}/bin/TKIGES.dll
						${LIB_WIN_ROOT}/bin/TKIVtk.dll
						${LIB_WIN_ROOT}/bin/TKIVtkDraw.dll
						${LIB_WIN_ROOT}/bin/TKLCAF.dll
						${LIB_WIN_ROOT}/bin/TKMath.dll
						${LIB_WIN_ROOT}/bin/TKMesh.dll
						${LIB_WIN_ROOT}/bin/TKMeshVS.dll
						${LIB_WIN_ROOT}/bin/TKMessageModel.dll
						${LIB_WIN_ROOT}/bin/TKMessageView.dll
						${LIB_WIN_ROOT}/bin/TKOffset.dll
						${LIB_WIN_ROOT}/bin/TKOpenGl.dll
						${LIB_WIN_ROOT}/bin/TKOpenGles.dll
						${LIB_WIN_ROOT}/bin/TKOpenGlesTest.dll
						${LIB_WIN_ROOT}/bin/TKOpenGlTest.dll
						${LIB_WIN_ROOT}/bin/TKPrim.dll
						${LIB_WIN_ROOT}/bin/TKQADraw.dll
						${LIB_WIN_ROOT}/bin/TKRWMesh.dll
						${LIB_WIN_ROOT}/bin/TKService.dll
						${LIB_WIN_ROOT}/bin/TKShapeView.dll
						${LIB_WIN_ROOT}/bin/TKShHealing.dll
						${LIB_WIN_ROOT}/bin/TKStd.dll
						${LIB_WIN_ROOT}/bin/TKStdL.dll
						${LIB_WIN_ROOT}/bin/TKSTEP.dll
						${LIB_WIN_ROOT}/bin/TKSTEP209.dll
						${LIB_WIN_ROOT}/bin/TKSTEPAttr.dll
						${LIB_WIN_ROOT}/bin/TKSTEPBase.dll
						${LIB_WIN_ROOT}/bin/TKSTL.dll
						${LIB_WIN_ROOT}/bin/TKTInspector.dll
						${LIB_WIN_ROOT}/bin/TKTInspectorAPI.dll
						${LIB_WIN_ROOT}/bin/TKTObj.dll
						${LIB_WIN_ROOT}/bin/TKTObjDRAW.dll
						${LIB_WIN_ROOT}/bin/TKToolsDraw.dll
						${LIB_WIN_ROOT}/bin/TKTopAlgo.dll
						${LIB_WIN_ROOT}/bin/TKTopTest.dll
						${LIB_WIN_ROOT}/bin/TKTreeModel.dll
						${LIB_WIN_ROOT}/bin/TKV3d.dll
						${LIB_WIN_ROOT}/bin/TKVCAF.dll
						${LIB_WIN_ROOT}/bin/TKView.dll
						${LIB_WIN_ROOT}/bin/TKViewerTest.dll
						${LIB_WIN_ROOT}/bin/TKVInspector.dll
						${LIB_WIN_ROOT}/bin/TKVRML.dll
						${LIB_WIN_ROOT}/bin/TKXCAF.dll
						${LIB_WIN_ROOT}/bin/TKXDE.dll
						${LIB_WIN_ROOT}/bin/TKXDECascade.dll
						${LIB_WIN_ROOT}/bin/TKXDEDRAW.dll
						${LIB_WIN_ROOT}/bin/TKXDEIGES.dll
						${LIB_WIN_ROOT}/bin/TKXDESTEP.dll
						${LIB_WIN_ROOT}/bin/TKXMesh.dll
						${LIB_WIN_ROOT}/bin/TKXml.dll
						${LIB_WIN_ROOT}/bin/TKXmlL.dll
						${LIB_WIN_ROOT}/bin/TKXmlTObj.dll
						${LIB_WIN_ROOT}/bin/TKXmlXCAF.dll
						${LIB_WIN_ROOT}/bin/TKXSBase.dll
						${LIB_WIN_ROOT}/bin/TKXSDRAW.dll

				)     
			
		elseif(CC_BC_LINUX)
			set(LIBS ${CMAKE_CURRENT_SOURCE_DIR}/install/linux/lib/xxx.so

					)	
		else()
		endif()
	else()
		if(CC_BC_WIN)
			set( LIBS ${LIB_WIN_ROOT}/libd/DRAWEXE.exp
			${LIB_WIN_ROOT}/libd/DRAWEXE.lib
			${LIB_WIN_ROOT}/libd/ExpToCasExe.exp
			${LIB_WIN_ROOT}/libd/ExpToCasExe.lib
			${LIB_WIN_ROOT}/libd/TKBin.exp
			${LIB_WIN_ROOT}/libd/TKBin.lib
			${LIB_WIN_ROOT}/libd/TKBinL.exp
			${LIB_WIN_ROOT}/libd/TKBinL.lib
			${LIB_WIN_ROOT}/libd/TKBinTObj.exp
			${LIB_WIN_ROOT}/libd/TKBinTObj.lib
			${LIB_WIN_ROOT}/libd/TKBinXCAF.exp
			${LIB_WIN_ROOT}/libd/TKBinXCAF.lib
			${LIB_WIN_ROOT}/libd/TKBO.exp
			${LIB_WIN_ROOT}/libd/TKBO.lib
			${LIB_WIN_ROOT}/libd/TKBool.exp
			${LIB_WIN_ROOT}/libd/TKBool.lib
			${LIB_WIN_ROOT}/libd/TKBRep.exp
			${LIB_WIN_ROOT}/libd/TKBRep.lib
			${LIB_WIN_ROOT}/libd/TKCAF.exp
			${LIB_WIN_ROOT}/libd/TKCAF.lib
			${LIB_WIN_ROOT}/libd/TKCDF.exp
			${LIB_WIN_ROOT}/libd/TKCDF.lib
			${LIB_WIN_ROOT}/libd/TKD3DHost.exp
			${LIB_WIN_ROOT}/libd/TKD3DHost.lib
			${LIB_WIN_ROOT}/libd/TKD3DHostTest.exp
			${LIB_WIN_ROOT}/libd/TKD3DHostTest.lib
			${LIB_WIN_ROOT}/libd/TKDCAF.exp
			${LIB_WIN_ROOT}/libd/TKDCAF.lib
			${LIB_WIN_ROOT}/libd/TKDraw.exp
			${LIB_WIN_ROOT}/libd/TKDraw.lib
			${LIB_WIN_ROOT}/libd/TKernel.exp
			${LIB_WIN_ROOT}/libd/TKernel.lib
			${LIB_WIN_ROOT}/libd/TKExpress.exp
			${LIB_WIN_ROOT}/libd/TKExpress.lib
			${LIB_WIN_ROOT}/libd/TKFeat.exp
			${LIB_WIN_ROOT}/libd/TKFeat.lib
			${LIB_WIN_ROOT}/libd/TKFillet.exp
			${LIB_WIN_ROOT}/libd/TKFillet.lib
			${LIB_WIN_ROOT}/libd/TKG2d.exp
			${LIB_WIN_ROOT}/libd/TKG2d.lib
			${LIB_WIN_ROOT}/libd/TKG3d.exp
			${LIB_WIN_ROOT}/libd/TKG3d.lib
			${LIB_WIN_ROOT}/libd/TKGeomAlgo.exp
			${LIB_WIN_ROOT}/libd/TKGeomAlgo.lib
			${LIB_WIN_ROOT}/libd/TKGeomBase.exp
			${LIB_WIN_ROOT}/libd/TKGeomBase.lib
			${LIB_WIN_ROOT}/libd/TKHLR.exp
			${LIB_WIN_ROOT}/libd/TKHLR.lib
			${LIB_WIN_ROOT}/libd/TKIGES.exp
			${LIB_WIN_ROOT}/libd/TKIGES.lib
			${LIB_WIN_ROOT}/libd/TKIVtk.exp
			${LIB_WIN_ROOT}/libd/TKIVtk.lib
			${LIB_WIN_ROOT}/libd/TKIVtkDraw.exp
			${LIB_WIN_ROOT}/libd/TKIVtkDraw.lib
			${LIB_WIN_ROOT}/libd/TKLCAF.exp
			${LIB_WIN_ROOT}/libd/TKLCAF.lib
			${LIB_WIN_ROOT}/libd/TKMath.exp
			${LIB_WIN_ROOT}/libd/TKMath.lib
			${LIB_WIN_ROOT}/libd/TKMesh.exp
			${LIB_WIN_ROOT}/libd/TKMesh.lib
			${LIB_WIN_ROOT}/libd/TKMeshVS.exp
			${LIB_WIN_ROOT}/libd/TKMeshVS.lib
			${LIB_WIN_ROOT}/libd/TKOffset.exp
			${LIB_WIN_ROOT}/libd/TKOffset.lib
			${LIB_WIN_ROOT}/libd/TKOpenGl.exp
			${LIB_WIN_ROOT}/libd/TKOpenGl.lib
			${LIB_WIN_ROOT}/libd/TKOpenGlTest.exp
			${LIB_WIN_ROOT}/libd/TKOpenGlTest.lib
			${LIB_WIN_ROOT}/libd/TKPrim.exp
			${LIB_WIN_ROOT}/libd/TKPrim.lib
			${LIB_WIN_ROOT}/libd/TKQADraw.exp
			${LIB_WIN_ROOT}/libd/TKQADraw.lib
			${LIB_WIN_ROOT}/libd/TKRWMesh.exp
			${LIB_WIN_ROOT}/libd/TKRWMesh.lib
			${LIB_WIN_ROOT}/libd/TKService.exp
			${LIB_WIN_ROOT}/libd/TKService.lib
			${LIB_WIN_ROOT}/libd/TKShHealing.exp
			${LIB_WIN_ROOT}/libd/TKShHealing.lib
			${LIB_WIN_ROOT}/libd/TKStd.exp
			${LIB_WIN_ROOT}/libd/TKStd.lib
			${LIB_WIN_ROOT}/libd/TKStdL.exp
			${LIB_WIN_ROOT}/libd/TKStdL.lib
			${LIB_WIN_ROOT}/libd/TKSTEP.exp
			${LIB_WIN_ROOT}/libd/TKSTEP.lib
			${LIB_WIN_ROOT}/libd/TKSTEP209.exp
			${LIB_WIN_ROOT}/libd/TKSTEP209.lib
			${LIB_WIN_ROOT}/libd/TKSTEPAttr.exp
			${LIB_WIN_ROOT}/libd/TKSTEPAttr.lib
			${LIB_WIN_ROOT}/libd/TKSTEPBase.exp
			${LIB_WIN_ROOT}/libd/TKSTEPBase.lib
			${LIB_WIN_ROOT}/libd/TKSTL.exp
			${LIB_WIN_ROOT}/libd/TKSTL.lib
			${LIB_WIN_ROOT}/libd/TKTObj.exp
			${LIB_WIN_ROOT}/libd/TKTObj.lib
			${LIB_WIN_ROOT}/libd/TKTObjDRAW.exp
			${LIB_WIN_ROOT}/libd/TKTObjDRAW.lib
			${LIB_WIN_ROOT}/libd/TKTopAlgo.exp
			${LIB_WIN_ROOT}/libd/TKTopAlgo.lib
			${LIB_WIN_ROOT}/libd/TKTopTest.exp
			${LIB_WIN_ROOT}/libd/TKTopTest.lib
			${LIB_WIN_ROOT}/libd/TKV3d.exp
			${LIB_WIN_ROOT}/libd/TKV3d.lib
			${LIB_WIN_ROOT}/libd/TKVCAF.exp
			${LIB_WIN_ROOT}/libd/TKVCAF.lib
			${LIB_WIN_ROOT}/libd/TKViewerTest.exp
			${LIB_WIN_ROOT}/libd/TKViewerTest.lib
			${LIB_WIN_ROOT}/libd/TKVRML.exp
			${LIB_WIN_ROOT}/libd/TKVRML.lib
			${LIB_WIN_ROOT}/libd/TKXCAF.exp
			${LIB_WIN_ROOT}/libd/TKXCAF.lib
			${LIB_WIN_ROOT}/libd/TKXDE.exp
			${LIB_WIN_ROOT}/libd/TKXDE.lib
			${LIB_WIN_ROOT}/libd/TKXDECascade.exp
			${LIB_WIN_ROOT}/libd/TKXDECascade.lib
			${LIB_WIN_ROOT}/libd/TKXDEDRAW.exp
			${LIB_WIN_ROOT}/libd/TKXDEDRAW.lib
			${LIB_WIN_ROOT}/libd/TKXDEIGES.exp
			${LIB_WIN_ROOT}/libd/TKXDEIGES.lib
			${LIB_WIN_ROOT}/libd/TKXDESTEP.exp
			${LIB_WIN_ROOT}/libd/TKXDESTEP.lib
			${LIB_WIN_ROOT}/libd/TKXMesh.exp
			${LIB_WIN_ROOT}/libd/TKXMesh.lib
			${LIB_WIN_ROOT}/libd/TKXml.exp
			${LIB_WIN_ROOT}/libd/TKXml.lib
			${LIB_WIN_ROOT}/libd/TKXmlL.exp
			${LIB_WIN_ROOT}/libd/TKXmlL.lib
			${LIB_WIN_ROOT}/libd/TKXmlTObj.exp
			${LIB_WIN_ROOT}/libd/TKXmlTObj.lib
			${LIB_WIN_ROOT}/libd/TKXmlXCAF.exp
			${LIB_WIN_ROOT}/libd/TKXmlXCAF.lib
			${LIB_WIN_ROOT}/libd/TKXSBase.exp
			${LIB_WIN_ROOT}/libd/TKXSBase.lib
			${LIB_WIN_ROOT}/libd/TKXSDRAW.exp
			${LIB_WIN_ROOT}/libd/TKXSDRAW.lib
		

			
			
			
			)
			set( DLLS ${LIB_WIN_ROOT}/bind/DRAWEXE.exe
				      ${LIB_WIN_ROOT}/bind/DRAWEXE.pdb
				      ${LIB_WIN_ROOT}/bind/ExpToCasExe.exe
				      ${LIB_WIN_ROOT}/bind/ExpToCasExe.pdb
				      ${LIB_WIN_ROOT}/bind/TKBin.dll
				      ${LIB_WIN_ROOT}/bind/TKBin.pdb
				      ${LIB_WIN_ROOT}/bind/TKBinL.dll
				      ${LIB_WIN_ROOT}/bind/TKBinL.pdb
				      ${LIB_WIN_ROOT}/bind/TKBinTObj.dll
				      ${LIB_WIN_ROOT}/bind/TKBinTObj.pdb
				      ${LIB_WIN_ROOT}/bind/TKBinXCAF.dll
				      ${LIB_WIN_ROOT}/bind/TKBinXCAF.pdb
				      ${LIB_WIN_ROOT}/bind/TKBO.dll
				      ${LIB_WIN_ROOT}/bind/TKBO.pdb
				      ${LIB_WIN_ROOT}/bind/TKBool.dll
				      ${LIB_WIN_ROOT}/bind/TKBool.pdb
				      ${LIB_WIN_ROOT}/bind/TKBRep.dll
				      ${LIB_WIN_ROOT}/bind/TKBRep.pdb
				      ${LIB_WIN_ROOT}/bind/TKCAF.dll
				      ${LIB_WIN_ROOT}/bind/TKCAF.pdb
				      ${LIB_WIN_ROOT}/bind/TKCDF.dll
				      ${LIB_WIN_ROOT}/bind/TKCDF.pdb
				      ${LIB_WIN_ROOT}/bind/TKD3DHost.dll
				      ${LIB_WIN_ROOT}/bind/TKD3DHost.pdb
				      ${LIB_WIN_ROOT}/bind/TKD3DHostTest.dll
				      ${LIB_WIN_ROOT}/bind/TKD3DHostTest.pdb
				      ${LIB_WIN_ROOT}/bind/TKDCAF.dll
				      ${LIB_WIN_ROOT}/bind/TKDCAF.pdb
				      ${LIB_WIN_ROOT}/bind/TKDraw.dll
				      ${LIB_WIN_ROOT}/bind/TKDraw.pdb
				      ${LIB_WIN_ROOT}/bind/TKernel.dll
				      ${LIB_WIN_ROOT}/bind/TKernel.pdb
				      ${LIB_WIN_ROOT}/bind/TKExpress.dll
				      ${LIB_WIN_ROOT}/bind/TKExpress.pdb
				      ${LIB_WIN_ROOT}/bind/TKFeat.dll
				      ${LIB_WIN_ROOT}/bind/TKFeat.pdb
				      ${LIB_WIN_ROOT}/bind/TKFillet.dll
				      ${LIB_WIN_ROOT}/bind/TKFillet.pdb
				      ${LIB_WIN_ROOT}/bind/TKG2d.dll
				      ${LIB_WIN_ROOT}/bind/TKG2d.pdb
				      ${LIB_WIN_ROOT}/bind/TKG3d.dll
				      ${LIB_WIN_ROOT}/bind/TKG3d.pdb
				      ${LIB_WIN_ROOT}/bind/TKGeomAlgo.dll
				      ${LIB_WIN_ROOT}/bind/TKGeomAlgo.pdb
				      ${LIB_WIN_ROOT}/bind/TKGeomBase.dll
				      ${LIB_WIN_ROOT}/bind/TKGeomBase.pdb
				      ${LIB_WIN_ROOT}/bind/TKHLR.dll
				      ${LIB_WIN_ROOT}/bind/TKHLR.pdb
				      ${LIB_WIN_ROOT}/bind/TKIGES.dll
				      ${LIB_WIN_ROOT}/bind/TKIGES.pdb
				      ${LIB_WIN_ROOT}/bind/TKIVtk.dll
				      ${LIB_WIN_ROOT}/bind/TKIVtk.pdb
				      ${LIB_WIN_ROOT}/bind/TKIVtkDraw.dll
				      ${LIB_WIN_ROOT}/bind/TKIVtkDraw.pdb
				      ${LIB_WIN_ROOT}/bind/TKLCAF.dll
				      ${LIB_WIN_ROOT}/bind/TKLCAF.pdb
				      ${LIB_WIN_ROOT}/bind/TKMath.dll
				      ${LIB_WIN_ROOT}/bind/TKMath.pdb
				      ${LIB_WIN_ROOT}/bind/TKMesh.dll
				      ${LIB_WIN_ROOT}/bind/TKMesh.pdb
				      ${LIB_WIN_ROOT}/bind/TKMeshVS.dll
				      ${LIB_WIN_ROOT}/bind/TKMeshVS.pdb
				      ${LIB_WIN_ROOT}/bind/TKOffset.dll
				      ${LIB_WIN_ROOT}/bind/TKOffset.pdb
				      ${LIB_WIN_ROOT}/bind/TKOpenGl.dll
				      ${LIB_WIN_ROOT}/bind/TKOpenGl.pdb
				      ${LIB_WIN_ROOT}/bind/TKOpenGlTest.dll
				      ${LIB_WIN_ROOT}/bind/TKOpenGlTest.pdb
				      ${LIB_WIN_ROOT}/bind/TKPrim.dll
				      ${LIB_WIN_ROOT}/bind/TKPrim.pdb
				      ${LIB_WIN_ROOT}/bind/TKQADraw.dll
				      ${LIB_WIN_ROOT}/bind/TKQADraw.pdb
				      ${LIB_WIN_ROOT}/bind/TKRWMesh.dll
				      ${LIB_WIN_ROOT}/bind/TKRWMesh.pdb
				      ${LIB_WIN_ROOT}/bind/TKService.dll
				      ${LIB_WIN_ROOT}/bind/TKService.pdb
				      ${LIB_WIN_ROOT}/bind/TKShHealing.dll
				      ${LIB_WIN_ROOT}/bind/TKShHealing.pdb
				      ${LIB_WIN_ROOT}/bind/TKStd.dll
				      ${LIB_WIN_ROOT}/bind/TKStd.pdb
				      ${LIB_WIN_ROOT}/bind/TKStdL.dll
				      ${LIB_WIN_ROOT}/bind/TKStdL.pdb
				      ${LIB_WIN_ROOT}/bind/TKSTEP.dll
				      ${LIB_WIN_ROOT}/bind/TKSTEP.pdb
				      ${LIB_WIN_ROOT}/bind/TKSTEP209.dll
				      ${LIB_WIN_ROOT}/bind/TKSTEP209.pdb
				      ${LIB_WIN_ROOT}/bind/TKSTEPAttr.dll
				      ${LIB_WIN_ROOT}/bind/TKSTEPAttr.pdb
				      ${LIB_WIN_ROOT}/bind/TKSTEPBase.dll
				      ${LIB_WIN_ROOT}/bind/TKSTEPBase.pdb
				      ${LIB_WIN_ROOT}/bind/TKSTL.dll
				      ${LIB_WIN_ROOT}/bind/TKSTL.pdb
				      ${LIB_WIN_ROOT}/bind/TKTObj.dll
				      ${LIB_WIN_ROOT}/bind/TKTObj.pdb
				      ${LIB_WIN_ROOT}/bind/TKTObjDRAW.dll
				      ${LIB_WIN_ROOT}/bind/TKTObjDRAW.pdb
				      ${LIB_WIN_ROOT}/bind/TKTopAlgo.dll
				      ${LIB_WIN_ROOT}/bind/TKTopAlgo.pdb
				      ${LIB_WIN_ROOT}/bind/TKTopTest.dll
				      ${LIB_WIN_ROOT}/bind/TKTopTest.pdb
				      ${LIB_WIN_ROOT}/bind/TKV3d.dll
				      ${LIB_WIN_ROOT}/bind/TKV3d.pdb
				      ${LIB_WIN_ROOT}/bind/TKVCAF.dll
				      ${LIB_WIN_ROOT}/bind/TKVCAF.pdb
				      ${LIB_WIN_ROOT}/bind/TKViewerTest.dll
				      ${LIB_WIN_ROOT}/bind/TKViewerTest.pdb
				      ${LIB_WIN_ROOT}/bind/TKVRML.dll
				      ${LIB_WIN_ROOT}/bind/TKVRML.pdb
				      ${LIB_WIN_ROOT}/bind/TKXCAF.dll
				      ${LIB_WIN_ROOT}/bind/TKXCAF.pdb
				      ${LIB_WIN_ROOT}/bind/TKXDE.dll
				      ${LIB_WIN_ROOT}/bind/TKXDE.pdb
				      ${LIB_WIN_ROOT}/bind/TKXDECascade.dll
				      ${LIB_WIN_ROOT}/bind/TKXDECascade.pdb
				      ${LIB_WIN_ROOT}/bind/TKXDEDRAW.dll
				      ${LIB_WIN_ROOT}/bind/TKXDEDRAW.pdb
				      ${LIB_WIN_ROOT}/bind/TKXDEIGES.dll
				      ${LIB_WIN_ROOT}/bind/TKXDEIGES.pdb
				      ${LIB_WIN_ROOT}/bind/TKXDESTEP.dll
				      ${LIB_WIN_ROOT}/bind/TKXDESTEP.pdb
				      ${LIB_WIN_ROOT}/bind/TKXMesh.dll
				      ${LIB_WIN_ROOT}/bind/TKXMesh.pdb
				      ${LIB_WIN_ROOT}/bind/TKXml.dll
				      ${LIB_WIN_ROOT}/bind/TKXml.pdb
				      ${LIB_WIN_ROOT}/bind/TKXmlL.dll
				      ${LIB_WIN_ROOT}/bind/TKXmlL.pdb
				      ${LIB_WIN_ROOT}/bind/TKXmlTObj.dll
				      ${LIB_WIN_ROOT}/bind/TKXmlTObj.pdb
				      ${LIB_WIN_ROOT}/bind/TKXmlXCAF.dll
				      ${LIB_WIN_ROOT}/bind/TKXmlXCAF.pdb
				      ${LIB_WIN_ROOT}/bind/TKXSBase.dll
				      ${LIB_WIN_ROOT}/bind/TKXSBase.pdb
				      ${LIB_WIN_ROOT}/bind/TKXSDRAW.dll
				      ${LIB_WIN_ROOT}/bind/TKXSDRAW.pdb
			)

		elseif(CC_BC_LINUX)
			set(LIBS ${CMAKE_CURRENT_SOURCE_DIR}/install/linux/lib/xxx.so
					)	
		else()
		endif()
	endif()
	
	INSTALL(FILES ${LIBS} DESTINATION lib)
	INSTALL(FILES ${LIBS} DESTINATION libd)
	INSTALL(FILES ${DLLS} DESTINATION bin)
	INSTALL(FILES ${DLLS} DESTINATION bind)
endif()